<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timeDescr"
        android:text="@string/timing"
        android:textSize="30sp"


        />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="20dp"
        android:layout_margin="4dp"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        android:id="@+id/timeHolder"
        android:layout_below="@id/timeDescr"

        >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:layout_margin="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/start_time"
        android:id="@+id/start_placeholder"
        />
    <TextView
        android:layout_margin="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_toRightOf="@+id/start_placeholder"
        android:text="asdasd"
        android:id="@+id/startTime"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/end_time"
        android:layout_below="@+id/start_placeholder"
        android:id="@+id/end_time_placholder"
        android:layout_margin="3dp"
        android:layout_marginTop="10dp"

        />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="30sp"
    android:layout_toRightOf="@+id/end_time_placholder"
        android:layout_below="@+id/startTime"
    android:text="asdasd"
    android:id="@+id/endTime"
        android:layout_margin="3dp"

        />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/days_active"
        android:textSize="30sp"
        android:id="@+id/tv"
        android:layout_below="@+id/timeHolder"
        />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv"
        android:layout_margin="4dp"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        android:id="@+id/weekHolder"

        >

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/days_of_week_recycler"

        />
    </android.support.v7.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appListDescr"
        android:text="@string/apps_list"
        android:layout_below="@+id/weekHolder"
        android:textSize="30sp"
        />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        android:layout_below="@+id/appListDescr"
        android:id="@+id/applistRecyclerWrapper"
        >
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appList"

            />

    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/applistRecyclerWrapper"
        android:layout_centerHorizontal="true"
        >
    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_delete_forever_pink_600_24dp"
        android:id="@+id/delete_profile"

        />

    </LinearLayout>

</RelativeLayout>